<resources>
    <string name="app_name">DONOFF</string>
    <string name="app_subtitle">Don\'t Nod Off</string>
    <string name="hello">님, 안녕하세요.</string>
    <string name="welcome">환영합니다!</string>
    <string name="have_nice_day">오늘도 안전한 운행 되세요!</string>
    <string name="get_out_drowsy">졸음 쫒아내기</string>
    <string name="network_icon">Network Error</string>
    <string name="face_fitting_line">Face Pitching Line</string>
    <string name="profile">프로필</string>
    <string name="register">회원가입</string>
    <string name="monitor">모니터링</string>
    <string name="measure">졸음측정</string>
    <string name="graph">그래프</string>
    <string name="graph_hr">심박수 그래프</string>
    <string name="setting">설정</string>
    <string name="account">계정</string>
    <string name="face_settings">얼굴화면 설정하기</string>
    <string name="fatigue_alarm_settings">졸음·수면 알람 설정</string>
    <string name="fatigue_alarm_screen_blink">화면 깜빡임 (빨강/투명)</string>
    <string name="fatigue_alarm_vibration">진동</string>
    <string name="fatigue_alarm_sound">경고음</string>
    <string name="empty" />
    <string name="camera_only">카메라만 사용</string>
    <string name="pick_date">날짜 선택</string>
    <string name="scan">스캔하기</string>
    <string name="scanning">스마트밴드 기기 검색 중</string>
    <string name="waiting">대기 중…</string>
    <string name="connecting">스마트밴드에\n연결 중…</string>
    <string name="connecting_inline">스마트밴드에 연결 중…</string>
    <string name="warning_network">데이터를 저장할 수 없습니다.\n인터넷 연결 상태를 확인하세요.</string>
    <string name="blink">Blink</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="front">Front</string>
    <string name="down">Down</string>
    <string name="normal">정상</string>
    <string name="drowsy">졸음</string>
    <string name="sleep_state">수면</string>
    <string name="bpm">BPM</string>
    <string name="no_data">데이터가 없습니다</string>
    <string name="graph_choice">현재 및 지난 데이터를 확인하세요.</string>
    <string name="heart_rate">심박수</string>
    <string name="heart_name">HR</string>
    <string name="saturation_of_peripheral_o2">산소포화도</string>
    <string name="saturation_of_peripheral_o2_name">SPO2</string>
    <string name="heart_rate_variability">심박변이도</string>
    <string name="heart_rate_variability_name">HRV</string>
    <string name="perfusion_index">혈류지수</string>
    <string name="perfusion_index_name">PI</string>
    <string name="zoom_in">확대</string>
    <string name="view_all">100%</string>
    <string name="zoom_out">축소</string>
    <string name="last_value">앞으로</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="login">로그인</string>
    <string name="go_login">로그인하기</string>
    <string name="find_register">회원정보찾기</string>
    <string name="start">시작하기</string>
    <string name="is_ready_account">이미 계정이 있나요?</string>
    <string name="next">다음</string>
    <string name="sir">님</string>
    <string name="logout">로그아웃</string>
    <string name="resign_membership">회원탈퇴</string>
    <string name="email_form">입력하신 메일 주소로 비밀번호 변경 링크를 보내드립니다.</string>
    <string name="email_input">이메일을 입력해주세요</string>
    <string name="submit">확인</string>
    <string name="cancel">취소</string>
    <string name="password_change">비밀번호 변경 링크가\n발송되었습니다.</string>
    <string name="face_visible_choice">보여질 항목을 선택해주세요</string>
    <string name="face_fitting_init">얼굴을 상자 안에 위치하도록 조정해 주세요.</string>
    <string name="face_fitting_warn">적정 거리를 유지해 주세요.</string>
    <string name="face_fitting_complete">인식 완료</string>
    <string name="eye">눈</string>
    <string name="eye_brow">눈썹</string>
    <string name="eye_pupil">동공</string>
    <string name="lip">입</string>
    <string name="face_mesh">얼굴망</string>
    <string name="face_line">얼굴선</string>
    <string name="black">검정색</string>
    <string name="white">하얀색</string>
    <string name="red">빨간색</string>
    <string name="green">초록색</string>
    <string name="blue">파란색</string>
    <string name="orange">주황색</string>
    <string name="fill_out_email_form">이메일 형식을 지켜주세요</string>
    <string name="name">이름</string>
    <string name="fill_out_password_form">비밀번호를 확인해주세요. (영문+숫자+특수문자 8자 이상)</string>
    <string name="password_check">비밀번호 확인</string>
    <string name="not_same_password">비밀번호가 같지 않습니다.</string>
    <string name="all_check">전체 동의</string>
    <string name="upper_14age">만 14세 이상 입니다.</string>
    <string name="terms_title">이용약관 동의</string>
    <string name="privacy_title">개인 정보 수집 및 동의</string>
    <string name="show_content">내용 보기</string>
    <string name="resister_complete">회원가입이 완료되었습니다.</string>
</resources>