<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/scanFragment"
        android:enabled="true"
        android:icon="@drawable/ic_camera"
        android:title="@string/measure"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/graphFragment"
        android:enabled="true"
        android:icon="@drawable/ic_graph"
        android:title="@string/graph"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/settingsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_setting"
        android:title="@string/setting"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
</menu>